@@ -278,15 +278,15 @@ scalaNull <- function(type) {
     class(result) <- "ScalaInterpreterReference"
     result
   } else if ( identifier == "do" ) function(snippet) {
-    warning(paste0("Syntax \"s$do('",snippet,"')\" is deprecated and will be removed.  Use \"s$.",snippet,"\" instead."))
+    # warning(paste0("Syntax \"s$do('",snippet,"')\" is deprecated and will be removed.  Use \"s$.",snippet,"\" instead."))
     result <- list(interpreter=interpreter,snippet=snippet)
     class(result) <- "ScalaInterpreterItem"
     result
   } else if ( identifier == "val" ) function(x) {
-    warning(paste0("Syntax \"s$val()\" is deprecated and will be removed."))
+    # warning(paste0("Syntax \"s$val()\" is deprecated and will be removed."))
     scalaGet(interpreter,x,NA)
   } else if ( identifier == ".val" ) function(x) {
-    warning(paste0("Syntax \"s$.val()\" is deprecated and will be removed."))
+    # warning(paste0("Syntax \"s$.val()\" is deprecated and will be removed."))
     scalaGet(interpreter,x,TRUE)
   } else if ( substr(identifier,1,1) == "." ) {
     identifier <- substring(identifier,2)
