@@ -1,6 +1,8 @@
 2.1.2 (2017-05-12)
   * Added 'rscala.scala.home' global option to provide another means to find
     the Scala home directory.
+  * s$val(), s$.val(), and s$do() are reinstated (but not recommended unless
+    you need to arguments to be variables instead of string literals).
 
 2.1.1 (2017-05-11)
   * Added functionality for depending packages to use Scala 2.10.x, 2.11.x, or
